--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -13,7 +13,7 @@
 		<div id="content">
 			<div id="content_dialer">
 				<br>
-				<input type="text" name="dialer_entry"></input>
+				<input type="text" id="dialer_entry"></input>
 				<br><br>
 
 				<button id="button_1">1</button>
@@ -31,9 +31,9 @@
 				<button id="button_9">9</button>
 				<br>
 
-				<button id="button_*">*</button>
+				<button id="button_star">*</button>
 				<button id="button_0">0</button>
-				<button id="button_#">#</button>
+				<button id="button_pound">#</button>
 				<br>
 
 				<br>
