visual gesture tab working

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -9,6 +9,7 @@
 			<button id="button_dialer">Dialer</button>
 			<button id="button_list">Contact List</button>
 			<button id="button_add">Add Contact</button>
+			<button id="button_gestures">Gestures</button>
 		</div>
 		<div id="content">
 			<div id="content_dialer">
@@ -62,6 +63,11 @@
 					<button id="add_contact">Add Contact</button>
 					<button id="btn_clear">Clear</button>
 				</form>
+			</div>
+			<div id="test_gestures">
+				<h1> Test Your Gestures Here </h1>
+				<div id="gesture_output"> idle </div>
+				<div id="gesture_area"> </div>
 			</div>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
