--- a/assignment7/index.html
+++ b/assignment7/index.html
@@ -1,9 +1,11 @@
 <html>
   <body>
     <h1> List of changes </h1>
-    <ul>
-      <li> Test </li>
-      <li> Test 2 </li>
-    </ul>
+    <h3> User Test 1 </h3>
+      <ul>
+        <li> The commands weren't obvious enough without a description. I made it more obvious what can be done.</li>
+        <li> Command "Set power to 90%" wasn't understood and the "power" variable became the string "set" instead of "90%". Fixed.</li>
+        <li></li>
+      </ul>
   </body>
 </html>
