--- a/assignment9/index.html
+++ b/assignment9/index.html
@@ -1,10 +1,8 @@
 <html>
   <body>
     <h3> Using Camera Mouse to change Windows Update restart time </h3>
-      <ul>
-        <li> The commands weren't obvious enough without a description. I made it more obvious what can be done.</li>
-        <li> Command "Set power to 90%" wasn't understood and the "power" variable became the string "set" instead of "90%". Fixed.</li>
-        <li></li>
-      </ul>
+
+    <iframe src="https://drive.google.com/file/d/15A99WbCWdl457oTFAtsFKT57UZXy3wDV/preview" width="640" height="480"></iframe>
+
   </body>
 </html>
