--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -13,6 +13,7 @@
 					<li> Contact </li>
 				</ul>
 			</nav>
+		<main>
 		<h1> The Future of Apple's MacBooks </h1>
 		<h2> Merging iOS and macOS </h2>
 			<p>
@@ -28,5 +29,6 @@
 			</p>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="phone.js"></script>
+	</main>
 	</body>
 </html>
