added alt to first image

--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -23,9 +23,25 @@
 				He mentioned that he has no plans of making Apple merge the two operating systems, although both will borrow
 				appropriate features from each other.
 			</p>
-		<h2> The Future of MacBooks </h2>
+		<h2> The next step for iOS and macOS </h2>
 			<p>
-				Currently, Apple is hailed for its exceptional silicon team which have produced smartphone chips that have
+				Phil Schiller, Apple's SVP of Worldwide Marketing, mentioned that a major Mac App Store redesign is coming
+				like the one we saw in iOS 11 and he assured Mac customers that they have not been forgotten. Current speculations
+				suggest the next versions of iOS and macOS will include "universal apps" where a developer submits one app
+				and that app can be run on both -- macOS and iOS. This is a big deal because it'll make Apple's ecosystem even
+				tighter and it also naturally brings up the concerns of compiling these apps for ARM (Apple's A-chip series) and
+				Intel (for all their Macs) processors which have drastically different architectures. If Apple can manage to make univesal apps big, they'll have a huge advantage over
+				the industry and the Mac App Store will become far more notable and important in Apple's vision for desktop
+				computing moving forward. With this model, if implemented correctly, both platforms become stronger and
+				better integrated within the ecosystem while they also getting to keep their own strengths (iOS or macOS won'
+				have to comprise in any way as Tim Cook suggested completely merging the to operating systems would).
+			</p>
+		<h2> The next step in hardware </h2>
+			<p>
+				The  Apple designed A11 Bionic chip powering the new iPhones are incredibly fast and far ahead of the industry in performance.
+				They benchmark scores considerably higher than the MacBook and even higher than the base MacBook Pro and some mid-tier
+				MacBook Pros.
+				<img alt="The image shows the iPhone X benchmarking better single-core and multi-core scores in Geekbench." src="Benchmark.jpg"/>
 			</p>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="phone.js"></script>
