added ARIA stuff to comments

--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -69,6 +69,19 @@
 				and tactful transition, they wouldn't be comprising on the user-experience anywhere while gaining all the advantages
 				that ARM processors have to offer.
 			</p>
+		<h2> Comments </h2>
+			<div>
+				<p id="msg" role="alert" class="hide"> Comment successfully uploaded! </p>
+				<label for="name">
+					Name:
+				</label>
+				<input id="name" type="text"><br>
+				<label for="comment">
+					Comment:
+				</label>
+				<input id="comment" type="text">
+				<button id="submit"> Submit </button>
+			</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="phone.js"></script>
 	</main>
